# ai-pod-nobody-knows

./: .claudeignore  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .markdownlint.json  .mcp.json.example  .pre-commit-config.yaml  .pre-commit-config.yaml.disabled  .secrets.baseline  AGENT_ENHANCEMENT_SUMMARY.md  AI_PODCAST_SYSTEM_ASSESSMENT_REPORT_2025.md  API_GUIDE.md  ARCHITECTURE_PHASES.md  BEST_PRACTICES_COMPLIANCE_MATRIX_2025.md  CHANGELOG.md  CLAUDE-backup-20250901-231709.md  CLAUDE-simplified.md  CLAUDE.md  CLAUDE.md.backup-20250903-231858  CLAUDE_CODE_EXECUTION_PLAN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  CRITICAL_REVIEW_AUGUST_2025.md  DEPLOYMENT.md  EPISODE_GUIDE.md  EXPLORATION_TODOS.md  FINALIZATION_CHECKLIST.md  IMPLEMENTATION_ROADMAP_2025.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_RECOMMENDATIONS_2025.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_ANALYSIS_SUMMARY.md  PROJECT_AUDIT_INCONSISTENCIES.md  PROJECT_HANDOFF_SUMMARY.md  PROJECT_STATUS_HANDOVER.md  (+56 more)
.archived/: MIGRATION_LOG.md
.claude/: .claudeignore  00_GLOBAL_CONSTANTS.md  00_GLOBAL_CONSTANTS.xml  00_global_constants.md  ARCHITECTURE.md  ARCHITECTURE_GUIDE.md  CLAUDE-CODE-CHECKLIST.md  CLAUDE.md  CLAUDE_BRIDGE.md  CLAUDE_DEV.md  CLAUDE_OPTIMIZED.md  CONTEXT.md  DUPLICATION_CRISIS_AUDIT.md  FOLDER_STRUCTURE.md  GETTING_STARTED.md  IMPORT_SYSTEM_EXAMPLE.md  INHERITANCE_TEST_REPORT.md  MCP_SETUP_COMPLETE.md  NAVIGATION.md  NAVIGATION_INDEX.md  NAVIGATION_SIMPLIFIED.md  PRODUCTION_READY_ARCHITECTURE.md  PRODUCTION_SYSTEM_VALIDATION.md  README.md  SETTINGS_GUIDE.md  SETTINGS_OPTIMIZATION_GUIDE.md  STRUCTURE.md  SYSTEM_TRANSFORMATION_SUMMARY.md  TOKEN_OPTIMIZATION_GUIDE.md  VISION.md  analyze_hooks.sh  debug_terms.py  fix_and_restore_hooks.sh  langgraph_visual_explainer.py  onboarding_guide.py  settings.json  settings.local.json.template  user_personas.py
.github/: SECURITY.md  security.xml
audio-output/: README.md  test-script.txt
config/: .env.production.template  .gitleaks.toml  .markdownlint.json  .mcp.json.example  .pre-commit-config.yaml  .secrets.baseline
dashboard/: CLAUDE.md  __init__.py  app.py  config.py  hello_streamlit.py
docs/: CLAUDE.md  CRITICAL_REVIEW_SEPTEMBER_2025.md  ENHANCED_FEATURES.md  ENVIRONMENT_SETUP.md  GITHUB_PUSH_PROCESS.md  README.md  SECURITY_HOOKS.md  TASK_4_1_COMPLETION_SUMMARY.md  assessment-quality-system-20250902.md  context-architecture-validation-20250902.md  deployment-summary-final-20250902.md  end-to-end-validation-20250902.md  integration-test-results-20250902.md  validation_report.txt  (+2 more)
src/: CLAUDE.md
(+1999 files in other folders)
